--- a/mnist_practical_keras.ipynb
+++ b/mnist_practical_keras.ipynb
@@ -22,9 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import gzip\n",
@@ -52,10 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def loadMNIST(path):\n",
@@ -80,13 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "train_set_labels, train_set_images, valid_set_labels, valid_set_images, test_set_labels, test_set_images = loadMNIST(r'D:\\mnist\\mnist.pkl.gz')"
+    "train_set_labels, train_set_images, valid_set_labels, valid_set_images, test_set_labels, test_set_images = loadMNIST(r'/Users/mitko/mnist.pkl.gz')"
    ]
   },
   {
@@ -124,9 +128,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 0 4 1 9 2 1 3 1 4]\n",
+      "[[0 0 0 0 0 1 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1]\n",
+      " [0 0 1 0 0 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 1 0 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 0 0 0 0 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "train_set_labels_output = np.zeros((len(train_set_labels),10),dtype=np.int16)        \n",
     "for n in range(10):\n",
@@ -148,9 +170,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(None, 32, 32, 1)\n",
+      "(None, 28, 28, 6)\n",
+      "(None, 14, 14, 6)\n",
+      "(None, 10, 10, 16)\n",
+      "(None, 5, 5, 16)\n",
+      "(None, 400)\n",
+      "(None, 120)\n",
+      "(None, 84)\n",
+      "(None, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "cnn = keras.models.Sequential()\n",
     "\n",
@@ -198,10 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sgd = keras.optimizers.SGD(lr=0.001, momentum=0.9)\n",
@@ -410,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
